--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -39,6 +39,6 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          git add debian/changelog
+          git add debian/changelog.md
           git commit -m "chore: update changelog for $VERSION" || echo "No changes to commit"
           git push origin HEAD
