--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: hardn
 Section: admin
 Priority: optional
-Maintainer: Tim Burns <cyborgcreations01@gmail.com>
+Maintainer: Tim Burns <control@cybersynapse.ro>
 Build-Depends: debhelper-compat (= 13),
                devscripts,
                dpkg-dev,
