--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -185,22 +185,35 @@ jobs:
         run: |
           echo "Simulating real user deployment on ${{ matrix.arch }}" > full-run.log
           docker run --rm --platform linux/${{ matrix.arch }} \
-            -e SKIP_WHIPTAIL=1 \
-            -e DEBIAN_FRONTEND=noninteractive \
-            -e CI=true \
-            -v "$(pwd)/hardn_*.deb:/tmp/hardn.deb" \
-            debian:stable-slim bash -ex << 'EOF' >> full-run.log 2>&1
-              export DEBIAN_FRONTEND=noninteractive
-              export SKIP_WHIPTAIL=1
-              export CI=true
-              apt-get update
-              apt-get install -y sudo gnupg bash whiptail coreutils findutils debconf-utils
-              echo "debconf debconf/frontend select Noninteractive" | debconf-set-selections
-              dpkg -i /tmp/hardn.deb || true
-              apt-get install -f -y
-              echo "--- Simulated user is launching HARDN-XDR ---"
-              chmod +x /usr/bin/hardn-xdr
-              sudo -E /usr/bin/hardn-xdr --no-daemon --auto
+           -e SKIP_WHIPTAIL=1 \
+           -e DEBIAN_FRONTEND=noninteractive \
+           -e CI=true \
+           -v "$(pwd)/hardn_*.deb:/tmp/hardn.deb" \
+           debian:stable-slim bash -ex <<EOF >> full-run.log 2>&1
+             set -euxo pipefail
+             echo "--- INSTALLING PREREQS ---"
+             apt-get update
+             apt-get install -y sudo gnupg bash whiptail coreutils findutils debconf-utils systemd systemd-sysv procps
+
+             echo "debconf debconf/frontend select Noninteractive" | debconf-set-selections
+
+             echo "--- INSTALLING HARDN-XDR PACKAGE ---"
+             dpkg -i /tmp/hardn.deb || true
+             apt-get install -f -y
+
+             echo "--- VERIFYING EXECUTABLE ---"
+             chmod +x /usr/bin/hardn-xdr
+             [ -f /usr/bin/hardn-xdr ] && echo "Launcher present."
+
+             echo "--- STARTING FULL DEPLOYMENT ---"
+             export SKIP_WHIPTAIL=1
+             export DEBIAN_FRONTEND=noninteractive
+             sudo -E /usr/bin/hardn-xdr --no-daemon --auto
+
+             echo "--- INSTALLATION COMPLETE ---"
+             echo "Reboot would normally occur here..."
+             sleep 3
+            echo "[TEST MODE] Simulated reboot step complete."
           EOF
 
       - name: Upload full system test log
