--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -183,42 +183,20 @@ jobs:
 
       - name: Simulate full HARDN deployment
         run: |
-         echo "Simulating real user deployment on ${{ matrix.arch }}" > full-run.log
-         docker run --rm --platform linux/${{ matrix.arch }} \
-          -e SKIP_WHIPTAIL=1 \
-          -e DEBIAN_FRONTEND=noninteractive \
-          -e CI=true \
-          debian:stable-slim bash -ex <<EOF >> full-run.log 2>&1
-            set -euxo pipefail
-
-            echo "--- INSTALLING PREREQUISITES ---"
+          echo "Simulating full install for ${{ matrix.arch }}"
+          docker run --rm -i --platform linux/${{ matrix.arch }} \
+           -e SKIP_WHIPTAIL=1 \
+           -e DEBIAN_FRONTEND=noninteractive \
+           -e CI=true \
+           -v "$(pwd)/hardn_*.deb:/tmp/hardn.deb" \
+           debian:stable-slim bash -euxo pipefail -c '
             apt-get update
-            apt-get install -y sudo gnupg bash git curl whiptail coreutils findutils \
-               build-essential dpkg-dev devscripts fakeroot lintian debhelper
-
-            echo "--- CLONING REPO ---"
-            git clone https://github.com/OpenSource-For-Freedom/HARDN-XDR.git
-            cd HARDN-XDR
-
-            echo "--- FIXING EXECUTABLE PERMISSIONS ---"
-            chmod +x debian/postinst hardn-xdr src/setup/hardn-main.sh
-            find src/setup/modules -type f -name "*.sh" -exec chmod +x {} \;
-
-            echo "--- BUILDING DEB PACKAGE ---"
-            dpkg-buildpackage -us -uc
-            cd ..
-
-            echo "--- INSTALLING DEB PACKAGE ---"
-            dpkg -i hardn_*.deb || true
+            apt-get install -y sudo bash gnupg curl whiptail
+            dpkg -i /tmp/hardn.deb || true
             apt-get install -f -y
-
-            echo "--- RUNNING HARDN-XDR DEPLOYMENT ---"
-            SKIP_WHIPTAIL=1 /usr/bin/hardn-xdr --no-daemon --auto
-
-            echo "--- END OF DEPLOYMENT ---"
-            sleep 2
-            echo "[TEST MODE] Simulated reboot complete"
-          EOF
+            echo "--- RUNNING HARDN DEPLOYMENT ---"
+            /usr/bin/hardn-xdr --no-daemon --auto
+           '
 
       - name: Upload full system test log
         uses: actions/upload-artifact@v4
