--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,14 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y dpkg-dev debhelper fakeroot build-essential devscripts lintian gnupg whiptail
 
+      - name: Ensure hardn-xdr exists and is executable
+        run: |
+          if [ ! -f hardn-xdr ]; then
+            echo "ERROR: hardn-xdr not found in project root. Build or copy it before packaging."
+            exit 1
+          fi
+          chmod +x hardn-xdr
+
       - name: Set executable permissions
         run: |
           chmod +x debian/postinst hardn-xdr src/setup/hardn-main.sh
