--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,6 +102,8 @@ jobs:
     strategy:
       matrix:
         arch: [amd64, arm64]
+    outputs:
+      fail_log_path: ${{ steps.collect-logs.outputs.log_path }}
     steps:
       - name: Register QEMU emulation
         uses: docker/setup-qemu-action@v3
@@ -117,6 +119,7 @@ jobs:
         run: |
           echo "Simulating full install for ${{ matrix.arch }}"
           cp hardn_*.deb ./hardn.deb
+          mkdir -p ./logbundle
 
           docker run --rm -i --platform linux/${{ matrix.arch }} \
             -e SKIP_WHIPTAIL=1 \
@@ -129,12 +132,12 @@ jobs:
               dpkg -i /tmp/hardn.deb || true
               apt-get install -f -y
 
+              mkdir -p /var/log/hardn-ci
               echo "--- RUNNING HARDN-XDR ---"
               /usr/bin/hardn-xdr || echo "HARDN-XDR exited"
 
               echo "--- SIMULATING MODULE EXECUTION ---"
               fail_count=0
-              mkdir -p /var/log/hardn-ci
               for script in /usr/lib/hardn-xdr/src/setup/modules/*.sh; do
                 name=$(basename "$script")
                 echo "---- RUNNING: $name ----" | tee -a /var/log/hardn-ci/modules.log
@@ -144,80 +147,61 @@ jobs:
                 }
               done
               echo "Total failures: $fail_count" | tee -a /var/log/hardn-ci/modules.log
-              [ "$fail_count" -eq 0 ] || exit 1
-            ' | tee full-run.log
+              cp -r /var/log/hardn-ci /tmp/
+            '
+          mv ./hardn.deb logbundle/
+          echo "log_path=logbundle" >> $GITHUB_OUTPUT
 
-      - name: Upload module logs
-        if: always()
+      - name: Upload logs and results
+        id: collect-logs
         uses: actions/upload-artifact@v4
         with:
           name: full-system-test-logs-${{ matrix.arch }}
           path: |
-            ./full-run.log
-            /var/log/hardn-ci/modules.log
-            /var/log/hardn-ci/*.log
+            logbundle
 
-      - name: Print full output to job log
+      - name: Print main output to job log
         if: always()
         run: |
-          echo "=== HARDN-XDR Full Output ==="
-          cat full-run.log || true
+          cat logbundle/hardn-ci/modules.log || true
 
-  tag-and-release:
-    needs: [build-and-test, test-deployment]
-    if: success()
+  report-failures:
+    needs: test-deployment
+    if: always()
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Fetch tags
-        run: git fetch --tags
-
-      - name: Download all .deb artifacts
+      - name: Download logs
         uses: actions/download-artifact@v4
         with:
-          path: .
+          name: full-system-test-logs-amd64
+          path: logs
 
-      - name: Move .deb files to root for release
+      - name: Parse failed modules and open/update issue
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          mkdir -p release
-          find . -name "*.deb" -exec mv {} release/ \;
+          issue_title="❌ HARDN-XDR Module Failures Detected"
+          body="## Module Failures Report\n\nThe following modules failed:\n\n"
 
-      - name: Set formatted release date
-        id: release_date
-        run: echo "value=$(date -R)" >> $GITHUB_OUTPUT
+          fail_modules=$(grep "\[FAIL\]" logs/hardn-ci/modules.log | cut -d' ' -f2)
+          count=0
 
-      - name: Create and push new tag
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          tag="${{ needs.build-and-test.outputs.new_tag }}"
-          if git rev-parse "$tag" >/dev/null 2>&1; then
-            echo "Tag $tag already exists. Skipping tag creation."
+          for module in $fail_modules; do
+            body+="### ❌ $module\n"
+            body+="\`\`\`\n"
+            tail -n 20 logs/hardn-ci/$module.log >> temp.log || echo "No details" >> temp.log
+            body+="$(cat temp.log)\n"
+            body+="\`\`\`\n"
+            count=$((count+1))
+          done
+
+          if [ "$count" -gt 0 ]; then
+            issue_number=$(gh issue list --state open --limit 1 --search "$issue_title" --json number -q '.[0].number' || echo "")
+            if [ -n "$issue_number" ]; then
+              gh issue comment "$issue_number" --body "$body"
+            else
+              gh issue create --title "$issue_title" --body "$body"
+            fi
           else
-            git tag "$tag" -m "Release $tag"
-            git push origin "$tag"
+            echo "No failed modules detected."
           fi
-
-      - name: Create GitHub Release and upload .deb
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ needs.build-and-test.outputs.new_tag }}
-          name: "Release ${{ needs.build-and-test.outputs.new_tag }}"
-          body: |
-            ![Logo](docs/assets/HARDN%20(1).png)
-            **HARDN-XDR Automated Release**
-
-            - **Version:** `${{ needs.build-and-test.outputs.new_tag }}`
-            - **Architectures:** `amd64`, `arm64`
-            - **Timestamp:** ${{ steps.release_date.outputs.value }}
-
-            - All modules tested non-interactively
-            - Deployment verified in container
-            - Logs uploaded if any module failed
-            - Lintian passed
-          files: |
-            release/*.deb
