--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -174,7 +174,7 @@ jobs:
 
       - name: Parse failed modules and open/update issue
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           issue_title="HARDN-XDR Module Failures Detected"
           body="## Module Failures Report\n\nThe following modules failed:\n\n"
@@ -218,7 +218,7 @@ jobs:
 
       - name: Create GitHub Release
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           gh release create "${{ needs.build-and-test.outputs.new_tag }}" \
             ./hardn_*.deb \
